--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=Spring-boot
-spring.security.user.name=
-spring.security.user.password=
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#
+#spring.security.user.name=admin
+#spring.security.user.password=admin
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/laptopshop
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/jobhunter
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
