--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,11 @@
 			<version>2.5.0</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.turkraft.springfilter</groupId>
+			<artifactId>jpa</artifactId>
+			<version>3.1.9</version>
+		</dependency>
 
 	</dependencies>
 
