--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Spring-boot
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3307/jobhunter
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jobhunter
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 #config jwt
@@ -13,3 +13,7 @@ duyhung.jwt.token-validity-in-seconds=8640000
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+#config pagination
+#start page = 1
+spring.data.web.pageable.one-indexed-parameters=true
