--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,15 @@ springdoc.swagger-ui.enabled=true
 #config pagination
 #start page = 1
 spring.data.web.pageable.one-indexed-parameters=true
+
+##config upload file
+#default = 1MB
+spring.servlet.multipart.max-file-size=50MB
+
+#default = 10MB (from data)
+spring.servlet.multipart.max-request-size=50MB
+
+#base path
+duyhung.upload-file.base-uri=file:///D:/project/upload/
+duyhung.upload-file.base-uri-uri=D:/project/upload/
+
