CRUD Permission & Role

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,9 @@ spring.servlet.multipart.max-request-size=50MB
 duyhung.upload-file.base-uri=file:///D:/project/upload/
 duyhung.upload-file.base-uri-uri=D:/project/upload/
 
+# CORS Configuration
+spring.mvc.cors.allowed-origins=http://localhost:3000,http://127.0.0.1:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.max-age=3600
