--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,14 @@ spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
 spring.mvc.cors.max-age=3600
+
+###
+#config email with Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+###
+#
