--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 ###
 #
+
+# t?t health check cho mail n?u ch?a c?n
+management.health.mail.enabled=false
